Add kamal deploy config
Signed-off-by: Dane Wilson <dane@fiyahsoft.com>

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,13 +1,13 @@
 # Name of your application. Used to uniquely configure containers.
-service: my-app
+service: iweather
 
 # Name of the container image.
-image: my-user/my-app
+image: dnwilson/iweather
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 5.161.236.59
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -17,16 +17,16 @@ servers:
 # If using something like Cloudflare, it is recommended to set encryption mode 
 # in Cloudflare's SSL/TLS setting to "Full" to enable end-to-end encryption. 
 proxy: 
-  ssl: true
-  host: app.example.com
+  ssl: false
+  host: iweather.fiyahsoft.com
   # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
   # app_port: 3000
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
-  username: my-user
+  server: ghcr.io
+  username: dnwilson
 
   # Always use an access token rather than real password (pulled from .kamal/secrets).
   password:
@@ -38,17 +38,20 @@ builder:
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 #
-# env:
-#   clear:
-#     DB_HOST: 192.168.0.2
-#   secret:
-#     - RAILS_MASTER_KEY
+env:
+  clear:
+    RAILS_LOG_LEVEL: debug
+  secret:
+    - RAILS_MASTER_KEY
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
-#
-# aliases:
-#   shell: app exec --interactive --reuse "bash"
+aliases:
+  console: app exec --interactive --reuse "bin/rails console"
+  shell: app exec --interactive --reuse "bash"
+  logs: app logs -f
+  dbc: app exec --interactive --reuse "bin/rails dbconsole"
+
 
 # Use a different ssh user than root
 #
@@ -57,14 +60,14 @@ builder:
 
 # Use a persistent storage volume.
 #
-# volumes:
-#   - "app_storage:/app/storage"
+volumes:
+  - "iweather_storage:/app/storage"
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
 # version inside the asset_path.
 #
-# asset_path: /app/public/assets
+asset_path: /app/public/assets
 
 # Configure rolling deploys by setting a wait time between batches of restarts.
 #
